--- a/src/skylines_engine/CMakeLists.txt
+++ b/src/skylines_engine/CMakeLists.txt
@@ -1,9 +1,7 @@
 #we store in variable SRCS all .cpp and .h and .cu files
 file(GLOB_RECURSE SRCS *.hpp *.cpp *.cu *.cuh)
 #we set the visual studio virtual folders
-set_project_virtual_folders("${SRCS}")
-
-include_directories(${Qt5Widgets_INCLUDE_DIRS})
+source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${SRCS})
 
 add_library(skylines_engine SHARED "${SRCS}")
 target_link_libraries(skylines_engine PRIVATE ${LIBS} ${OPENGL_LIBRARIES})
