--- a/src/skylines_ui/CMakeLists.txt
+++ b/src/skylines_ui/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB_RECURSE UIS "*.ui")
 #wraper to generate .h files from .ui files. The new .h files are stored in UIS_HEADERS variable
 qt5_wrap_ui(UIS_HEADERS ${UIS})
 #we set the visual studio virtual folders
-set_project_virtual_folders("${UIS}")
+source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${UIS})
 
 # #we store in variable RESOURCES all .qrc
 # FILE(GLOB_RECURSE RESOURCES "*.qrc")
@@ -16,7 +16,7 @@ set(CMAKE_AUTOMOC ON)
 #we store in variable SRCS all .cpp and .h and .cu files
 file(GLOB_RECURSE SRCS *.hpp *.cpp)
 #we set the visual studio virtual folders
-set_project_virtual_folders("${SRCS}")
+source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${SRCS})
 
 include_directories(../skylines_engine)
 add_executable(skylines_ui "${SRCS}" ${UIS_HEADERS})
