--- a/src/skylines_engine/CMakeLists.txt
+++ b/src/skylines_engine/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB_RECURSE SRCS *.hpp *.cpp *.cu *.cuh)
 source_group(TREE ${CMAKE_CURRENT_LIST_DIR} FILES ${SRCS})
 
 add_library(skylines_engine SHARED "${SRCS}")
-target_link_libraries(skylines_engine PRIVATE ${LIBS} ${OPENGL_LIBRARIES})
+target_link_libraries(skylines_engine PRIVATE ${LIBS})
 
 ######################################################
 # For VS environment purposes we copy the needed dll
