Implemented GPU approach

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 set(APIS_PATH "$ENV{APIS_PATH_UdG}")
 
 # Boost
-include_directories("${APIS_PATH}/boost-1.65.0/include")
-link_directories("${APIS_PATH}/boost-1.65.0/lib")
+include_directories("${APIS_PATH}/boost-1.65.0")
+link_directories("${APIS_PATH}/boost-1.65.0/lib64-msvc-14.0")
 
 # Gtest and GMock
 include_directories("${APIS_PATH}/googletest-distribution/include")
@@ -58,24 +58,24 @@ include_directories(SYSTEM "${APIS_PATH}/fast-cpp-csv-parser-master/include")
 
 #CUDA
 find_package(CUDA QUIET REQUIRED)
-list(APPEND CUDA_NVCC_FLAGS --cl-version=2017)
-set(CUDA_HOST_COMPILER "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.11.25503/bin/HostX64/x64/cl.exe" CACHE STRING "" FORCE)
+LIST(APPEND CUDA_NVCC_FLAGS --gpu-architecture=compute_53 --gpu-code=compute_53)
+LIST(APPEND CUDA_NVCC_FLAGS_DEBUG -g -G)
+CUDA_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/skylines_engine)
 set(CUDA_VERBOSE_BUILD ON CACHE BOOL "" FORCE)
-CUDA_INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
-set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON CACHE BOOL "" FORCE)
+include_directories(${CUDA_INCLUDE_DIRS})
 
 #dll post copy depencies. Debug purposes. In Linux we use stow
 if(WIN32)
 	set(DEPENDENCY_LIBS_AND_FILES
 	   #cuda
-	   "${CUDA_TOOLKIT_ROOT_DIR}/bin/cudart64_90.dll"
+	   "${CUDA_TOOLKIT_ROOT_DIR}/bin/cudart64_80.dll"
 	)
     set(DEPENDENCY_LIBS_AND_FILES_DEBUG_SPECIFIC
        #gtest
-       "${APIS_PATH}/googletest-distribution/lib/Debug/gtest.dll"
-       "${APIS_PATH}/googletest-distribution/lib/Debug/gtest_main.dll"
-       "${APIS_PATH}/googletest-distribution/lib/Debug/gmock.dll"
-       "${APIS_PATH}/googletest-distribution/lib/Debug/gmock_main.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Debug/gtest.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Debug/gtest_main.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Debug/gmock.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Debug/gmock_main.dll"
 
        #qt
        "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Cored.dll"
@@ -87,10 +87,10 @@ if(WIN32)
     )
     set(DEPENDENCY_LIBS_AND_FILES_RELEASE_SPECIFIC
        #gtest
-       "${APIS_PATH}/googletest-distribution/lib/Release/gtest.dll"
-       "${APIS_PATH}/googletest-distribution/lib/Release/gtest_main.dll"
-       "${APIS_PATH}/googletest-distribution/lib/Release/gmock.dll"
-       "${APIS_PATH}/googletest-distribution/lib/Release/gmock_main.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Release/gtest.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Release/gtest_main.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Release/gmock.dll"
+       "${APIS_PATH}/googletest-distribution/bin/Release/gmock_main.dll"
 
        #qt
        "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Core.dll"
