Adding apis to local DB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,6 @@ project(${SOLUTION_NAME})
 #testing enabled
 enable_testing()
 
-# Avoid minRelSize/RelWithDebugInfo configurations
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
-
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Cmake Inclusions
@@ -20,29 +17,31 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 # =============================================================================
 # Include third party libraries
 # =============================================================================
-set(APIS_PATH "$ENV{APIS_PATH_UdG}")
 
 # Boost
-include_directories("${APIS_PATH}/boost-1.65.0")
-link_directories("${APIS_PATH}/boost-1.65.0/lib64-msvc-14.0")
+include_directories("submodule/apis_vs2015/boost-1.65.0")
+link_directories("submodule/apis_vs2015/boost-1.65.0/lib64-msvc-14.0")
 
 # Gtest and GMock
-include_directories("${APIS_PATH}/googletest-distribution/include")
-link_directories("${APIS_PATH}/googletest-distribution/lib")
+include_directories("submodule/apis_vs2015/googletest-distribution/include")
+link_directories("submodule/apis_vs2015/googletest-distribution/lib")
 set(LIBS ${LIBS} gtest gtest_main gmock gmock_main)
 
 # Celero
-include_directories("${APIS_PATH}/celero-master/include")
-link_directories("${APIS_PATH}/celero-master/lib")
+include_directories("submodule/apis_vs2015/celero-master/include")
+link_directories("submodule/apis_vs2015/celero-master/lib")
 set(LIBS ${LIBS} debug celerod optimized celero)
 
 # Rapidjson
-include_directories("${APIS_PATH}/rapidjson-master/include")
+include_directories("submodule/apis_vs2015/rapidjson-master/include")
 
 # Spdlog
-include_directories("${APIS_PATH}/spdlog-master/include")
+include_directories("submodule/apis_vs2015/spdlog-master/include")
 
 #qt
+set(CMAKE_PREFIX_PATH "C:/git_src/skylines/submodule/apis_vs2015/Qt/msvc2015_64")
+#"D:/Qt/5.9.1/msvc2015_64"
+#"C:/git_src/skylines/submodule/apis_vs2015/Qt/msvc2015_64"
 set(CMAKE_INCLUDE_CURRENT_DIR ON) # Find includes in corresponding build directories
 find_package(Qt5Widgets)
 find_package(Qt5Core)
@@ -54,12 +53,12 @@ include_directories(${Qt5Widgets_INCLUDE_DIRS})
 set(LIBS ${LIBS} ${OPENGL_LIBRARIES})
 
 #freeglut
-include_directories("${APIS_PATH}/freeglut-3.0/include")
-link_directories("${APIS_PATH}/freeglut-3.0/lib/x64")
+include_directories("submodule/apis_vs2015/freeglut-3.0/include")
+link_directories("submodule/apis_vs2015/freeglut-3.0/lib/x64")
 set(LIBS ${LIBS} freeglut)
 
 # CSV parser
-include_directories(SYSTEM "${APIS_PATH}/fast-cpp-csv-parser-master/include")
+include_directories(SYSTEM "submodule/apis_vs2015/fast-cpp-csv-parser-master/include")
 
 #CUDA
 find_package(CUDA QUIET REQUIRED)
@@ -76,37 +75,37 @@ if(WIN32)
 	   "${CUDA_TOOLKIT_ROOT_DIR}/bin/cudart64_80.dll"
 	   
 	   #freeglut
-       "${APIS_PATH}/freeglut-3.0/bin/x64/freeglut.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/freeglut-3.0/bin/x64/freeglut.dll"
 	)
     set(DEPENDENCY_LIBS_AND_FILES_DEBUG_SPECIFIC
        #gtest
-       "${APIS_PATH}/googletest-distribution/bin/Debug/gtest.dll"
-       "${APIS_PATH}/googletest-distribution/bin/Debug/gtest_main.dll"
-       "${APIS_PATH}/googletest-distribution/bin/Debug/gmock.dll"
-       "${APIS_PATH}/googletest-distribution/bin/Debug/gmock_main.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Debug/gtest.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Debug/gtest_main.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Debug/gmock.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Debug/gmock_main.dll"
 
        #qt
-       "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Cored.dll"
-       "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Guid.dll"
-       "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Widgetsd.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/Qt/msvc2015_64/bin/Qt5Cored.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/Qt/msvc2015_64/bin/Qt5Guid.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/Qt/msvc2015_64/bin/Qt5Widgetsd.dll"
 
        #celero
-       "${APIS_PATH}/celero-master/bin/celerod.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/celero-master/bin/celerod.dll"
     )
     set(DEPENDENCY_LIBS_AND_FILES_RELEASE_SPECIFIC
        #gtest
-       "${APIS_PATH}/googletest-distribution/bin/Release/gtest.dll"
-       "${APIS_PATH}/googletest-distribution/bin/Release/gtest_main.dll"
-       "${APIS_PATH}/googletest-distribution/bin/Release/gmock.dll"
-       "${APIS_PATH}/googletest-distribution/bin/Release/gmock_main.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Release/gtest.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Release/gtest_main.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Release/gmock.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/googletest-distribution/bin/Release/gmock_main.dll"
 
        #qt
-       "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Core.dll"
-       "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Gui.dll"
-       "$ENV{CMAKE_PREFIX_PATH}/bin/Qt5Widgets.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/Qt/msvc2015_64/bin/Qt5Core.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/Qt/msvc2015_64/bin/Qt5Gui.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/Qt/msvc2015_64/bin/Qt5Widgets.dll"
 
        #celero
-       "${APIS_PATH}/celero-master/bin/celero.dll"
+       "${CMAKE_CURRENT_SOURCE_DIR}/submodule/apis_vs2015/celero-master/bin/celero.dll"
     )
 endif()
 
