--- a/tests/blackbox/CMakeLists.txt
+++ b/tests/blackbox/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 include_directories(../../src/skylines_engine)
 
-add_executable(cpu_stbf_bbtest cpu_stbf_bbtest.cpp time_utils.hpp)
+add_executable(cpu_stbf_bbtest cpu_stbf_bbtest.cpp)
 target_link_libraries(cpu_stbf_bbtest ${LIBS} skylines_engine)
 set_property(TARGET cpu_stbf_bbtest PROPERTY FOLDER "tests/blackbox")
