--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,14 +1,6 @@
 
 include_directories(../src/skylines_engine)
 
-# add_executable(benchmarks_all benchmarks_all.cpp)
-# target_link_libraries(benchmarks_all ${LIBS} skylines_engine)
-# set_property(TARGET benchmarks_all PROPERTY FOLDER "benchmarks")
-
-# add_executable(benchmarks_gpu_compare benchmarks_gpu_compare.cpp)
-# target_link_libraries(benchmarks_gpu_compare ${LIBS} skylines_engine)
-# set_property(TARGET benchmarks_gpu_compare PROPERTY FOLDER "benchmarks")
-
-add_executable(benchmarks_new benchmarks_new.cpp time.hpp)
+add_executable(benchmarks_new benchmarks_new.cpp)
 target_link_libraries(benchmarks_new ${LIBS} skylines_engine)
 set_property(TARGET benchmarks_new PROPERTY FOLDER "benchmarks")
